# MinecraftConsoles

./: Common  Minecraft.Client.vcxproj  Minecraft.Client.vcxproj.filters
Minecraft.Client/: AbstractTexturePack.cpp  BufferedImage.cpp  DefaultTexturePack.cpp  Extrax64Stubs.cpp  Extrax64Stubs.h  FolderTexturePack.cpp  GameRenderer.cpp  Gui.cpp  GuiComponent.cpp  Input.cpp  LevelRenderer.cpp  LocalPlayer.cpp  Minecraft.cpp  Minecraft.h  TextureMap.cpp  TexturePack.cpp  stdafx.h  stubs.h
Minecraft.Client/Apple/: AppleAudio.cpp  AppleAudio.h  AppleInputStubs.cpp  AppleLinkerStubs.cpp  AppleStubs.cpp  AppleStubs.h  Apple_App.cpp  GDrawGLContext.h  GDrawGLContext.mm  gdraw_apple.c
Minecraft.Client/Common/: Consoles_App.cpp  Consoles_App.h
Minecraft.Client/Common/Audio/: Consoles_SoundEngine.h  SoundEngine.cpp
Minecraft.Client/Common/Network/: LANSessionManager.cpp  LANSessionManager.h  NATTraversal.cpp  NATTraversal.h  P2PConnectionManager.h  PlatformNetworkManagerStub.cpp  STUNClient.cpp  STUNClient.h
Minecraft.Client/Common/UI/: IUIScene_AbstractContainerMenu.cpp  UIControl_Base.cpp  UIControl_CheckBox.cpp  UIController.cpp  UILayer.h  UIScene.h  UIScene_CapeSelectMenu.cpp  UIScene_CreateWorldMenu.cpp  UIScene_CreateWorldMenu.h  UIScene_CustomizeCharacterMenu.cpp  UIScene_HelpAndOptionsMenu.cpp  UIScene_HelpAndOptionsMenu.h  UIScene_InGameSaveManagementMenu.cpp  UIScene_InGameSaveManagementMenu.h  UIScene_Intro.cpp  UIScene_LoadOrJoinMenu.cpp  UIScene_MainMenu.cpp  UIScene_PauseMenu.cpp  UIScene_SaveMessage.cpp  UIScene_SettingsAudioMenu.cpp  UIScene_SettingsAudioMenu.h  UIScene_SettingsGraphicsMenu.cpp  UIScene_SettingsGraphicsMenu.h  UIScene_SettingsMenu.cpp  UIScene_SettingsMenu.h  UIScene_SettingsOptionsMenu.cpp  UIScene_SettingsOptionsMenu.h
Minecraft.Client/Common/zlib/: gzguts.h
Minecraft.Client/Durango/ServiceConfig/: Events-XBLA.8-149E11AEEvents.h
Minecraft.Client/MacOSX/: CMakeLists.txt  README.md  main.cpp
Minecraft.Client/MacOSX/Shaders/: bootstrap_triangle.frag  bootstrap_triangle.vert  mce_color.vert  mce_textured.frag  mce_textured.vert  mce_textured_fog_alphatest.frag
Minecraft.Client/Vulkan/: VulkanBootstrapApp.h  VulkanBootstrapAppCore.cpp  VulkanBootstrapAppRender.cpp  VulkanRenderManager.cpp  Vulkan_UIController.cpp  Vulkan_UIController.h
Minecraft.Client/Vulkan/4JLibs/inc/: 4J_Render.h
Minecraft.Client/Windows64/: Windows64_StorageHttp.cpp
Minecraft.Client/Windows64/Network/: GameNetworkManager.cpp  P2PConnectionManagerWin.cpp  P2PConnectionManagerWin.h  PlatformNetworkManagerInterface.h  PlatformNetworkManagerStub.cpp  PlatformNetworkManagerStub.h  WinsockNetLayer.h
Minecraft.Client/Windows64Media/Irida/: Irida.pck
Minecraft.Client/miniupnpc/: Makefile.mingw  minisoap.c  miniupnpcstrings.h  setup.py  setupmingw32.py
Minecraft.Client/tools/: extract_xwb.py
Minecraft.World/: C4JThread.cpp  ConsoleSaveFileSplit.cpp  ConsoleSaveFileSplit.h  DurangoStats.cpp  File.cpp  FileHeader.h  Hasher.cpp  Language.cpp  Player.cpp  StringHelpers.cpp  ZonedChunkStorage.cpp  stdafx.h
Minecraft.World/x64headers/: extraX64.h
